--- a/web/index.html
+++ b/web/index.html
@@ -32,7 +32,7 @@
            </script>  -->
     </head>
     <body>
-        <div id="main">
+        <div class="main">
             <input id="btn" type="submit" value="Send cards info" onclick="script_activate()">
         </div>
     </body>
