--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width image=device-width, initial-scale=1.0">
         <title>Document</title>
+        <!-- fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
@@ -32,8 +33,8 @@
            </script>  -->
     </head>
     <body>
-        <input id="btn" type="submit" value="Send cards info" onclick="script_activate()">
-        <div class="main">
-        </div>
+        <input type="checkbox" id="demo" onclick="script_activate()"/>
+        <label for="demo" value="Send cards info"><p>Send cards</p></label>
+        <div class="main"></div>
     </body>
 </html>
